force-app/main/default/objects/DD_Promotion_Codes__mdt/DD_Promotion_Codes__mdt.object-meta.xml
<CustomObject>
    <label>Promotion Code</label>
    <pluralLabel>Promotion Codes</pluralLabel>
</CustomObject>