force-app/main/default/objects/DD_Promotion_Codes__mdt/fields/Coupon_Id__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Id__c</fullName>
    <label>Coupon Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>