force-app/main/default/objects/DD_Promotion_Codes__mdt/fields/Off__c.field-meta.xml
<CustomField>
    <fullName>Off__c</fullName>
    <label>Off%</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>