force-app/main/default/objects/DD_Promotion_Codes__mdt/fields/One_Time_Use_Only__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Use_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One-Time Use Only?</label>
    <type>Checkbox</type>
</CustomField>